--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Page Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
+        body {
+            background-color:#ebeced;
+        }
         #dog-walking {
             position: fixed;
             left: 0;
